--- a/functions/sample/nodejs/package.json
+++ b/functions/sample/nodejs/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cloudant/cloudant": "^4.4.0"
+    "@cloudant/cloudant": "^4.5.1",
+    "@ibm-cloud/cloudant": "^0.8.0",
+    "ibm-cloud-sdk-core": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^8.27.0"
